筆記功能 － 分頁和排序